--- a/packages/shadowsocks/Makefile
+++ b/packages/shadowsocks/Makefile
@@ -31,6 +31,7 @@ include $(INCLUDE_DIR)/package.mk
 define Package/shadowsocks-libev/Default
 	SECTION:=net
 	CATEGORY:=Gmod
+	SUBMENU:=Network
 	TITLE:=Lightweight Secured Socks5 Proxy $(2)
 	URL:=https://github.com/shadowsocks/shadowsocks-libev
 	VARIANT:=$(1)
