--- a/luci/luci-extra/Makefile
+++ b/luci/luci-extra/Makefile
@@ -60,6 +60,8 @@ endef
 
 $(eval $(call application,aria2,LuCI Support for Aria2,\
 	+PACKAGE_luci-app-aria2:aria2 ))
+$(eval $(call application,chinadns,LuCI Support for ChinaDNS,\
+	+PACKAGE_luci-app-chinadns:ChinaDNS ))
 
 
 ### Compile ###
