--- a/luci/local-luci/Makefile
+++ b/luci/local-luci/Makefile
@@ -45,7 +45,8 @@ define Package/local-luci-zh-cn/postinst
 #!/bin/sh
 if [ -z "$${IPKG_INSTROOT}" ]; then
     sed -i  's/auto/zh_cn/g' /etc/config/luci
-    sed -i  's/UTC/"CST-8"/g' /etc/config/system
+    sed -i  's/UTC/CST-8/g' /etc/config/system
+    sed -i '/option timezone/a option zonename "Asia/Shanghai"' /etc/config/system
 fi
 exit 0
 endef
