--- a/package/redsocks2/Makefile
+++ b/package/redsocks2/Makefile
@@ -25,7 +25,8 @@ include $(INCLUDE_DIR)/package.mk
 
 define Package/redsocks2
 	SECTION:=net
-	CATEGORY:=Network
+	CATEGORY:=Gmod
+	SUBMENU:=Network
 	TITLE:=Redirect any TCP connection to a SOCKS or HTTPS proxy server
 	URL:=https://github.com/semigodking/redsocks
 	DEPENDS:=+libevent2
