--- a/package/pdnsd/Makefile
+++ b/package/pdnsd/Makefile
@@ -48,8 +48,7 @@ define Package/pdnsd/install
 	$(INSTALL_DIR) $(1)/etc/init.d
 	$(INSTALL_BIN) ./files/pdnsd.init $(1)/etc/init.d/pdnsd
 	$(INSTALL_DIR) $(1)/etc
-	$(INSTALL_CONF) ./files/pdnsd.conf $(1)/etc/
-	$(INSTALL_DATA) ./files/pdnsd.include $(1)/etc/
+	$(INSTALL_DATA) ./files/pdnsd.conf $(1)/etc/
 endef
 
 $(eval $(call BuildPackage,pdnsd))
