--- a/package/pdnsd/files/pdnsd.conf
+++ b/package/pdnsd/files/pdnsd.conf
@@ -12,6 +12,24 @@ global {
     neg_domain_pol=on;
     udpbufsize=1024;
 }
+server {                                                                       
+    label= "dns114";                                                  
+    ip = 114.114.114.114,114.114.115.115; 
+    timeout = 4;     
+    uptest = ping;
+    ping_timeout = 100;
+    interval = 15m;
+    preset = off;                                                          
+}
+server {
+    label= "googledns"; 
+    ip = 8.8.8.8,8.8.4.4;
+    timeout = 4;
+    uptest = ping;
+    ping_timeout = 100;
+    interval = 15m;
+    preset = off;
+}
 server {
     label = "opendns";
     ip = 208.67.222.222, 208.67.220.220;
@@ -25,25 +43,16 @@ server {
     interval = 15m;
     preset = off;
 }
+/*
+#此处放置你自己的server
+#比如
 server {
-    label= "googledns"; 
-    ip = 8.8.8.8,8.8.4.4;
-    timeout = 4;
-    uptest = ping;
-    ping_timeout = 100;
-    interval = 15m;
-    preset = off;
+    label= "mydns";
+    ip = 127.0.0.1;
+    port = 1053;
+    uptest = none;        
 }
-server {                                                                       
-    label= "dns114";                                                  
-    ip = 114.114.114.114,114.114.115.115; 
-    timeout = 4;     
-    uptest = ping;
-    ping_timeout = 100;
-    interval = 15m;
-    preset = off;                                                          
-}
-include {file="/etc/pdnsd.include";}
+*/
 source {
     owner=localhost;
     file="/etc/hosts";
