--- a/package/pdnsd/files/pdnsd.conf
+++ b/package/pdnsd/files/pdnsd.conf
@@ -5,30 +5,12 @@ global {
     server_ip = 192.168.1.1;			#any or your ip
     server_port = 2053;				#your port
     status_ctl = on;
-    query_method=udp_tcp;
+    query_method=tcp_only;                       #查询上级的方法tcp_only udp_tcp udp_only
     min_ttl=1d;					#单位有w周 d天 h小时 m分钟 
     max_ttl=1w;
     timeout=10;
     neg_domain_pol=on;
     udpbufsize=1024;
-}
-server {                                                                       
-    label= "dns114";                                                  
-    ip = 114.114.114.114,114.114.115.115; 
-    timeout = 4;     
-    uptest = ping;
-    ping_timeout = 100;
-    interval = 15m;
-    preset = off;                                                          
-}
-server {
-    label= "googledns"; 
-    ip = 8.8.8.8,8.8.4.4;
-    timeout = 4;
-    uptest = ping;
-    ping_timeout = 100;
-    interval = 15m;
-    preset = off;
 }
 server {
     label = "opendns";
@@ -42,6 +24,25 @@ server {
         ping_timeout = 100;
     interval = 15m;
     preset = off;
+    port = 5353;
+}
+server {
+    label= "googledns"; 
+    ip = 8.8.8.8,8.8.4.4;
+    timeout = 4;
+    uptest = ping;
+    ping_timeout = 100;
+    interval = 15m;
+    preset = off;
+}
+server {                                                                       
+    label= "dns114";                                                  
+    ip = 114.114.114.114,114.114.115.115; 
+    timeout = 4;     
+    uptest = ping;
+    ping_timeout = 100;
+    interval = 15m;
+    preset = off;                                                          
 }
 /*
 #此处放置你自己的server
