--- a/package/redsocks2-ssl/Makefile
+++ b/package/redsocks2-ssl/Makefile
@@ -8,8 +8,9 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=redsocks2
-PKG_VERSION:=0.65
-PKG_RELEASE:=4f61713db65ae5b966cf28df7231d2509fd73601
+PKG_VERSION:=0.66
+PKG_RELEASE:=8b9228e12f34bf55c5b5f91d15753419a0fe1288
+//PKG_RELEASE:=4f61713db65ae5b966cf28df7231d2509fd73601
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE).tar.bz2
