Depends on argp-standalone in build time

--- a/package/cdns/Makefile
+++ b/package/cdns/Makefile
@@ -21,6 +21,7 @@ PKG_LICENSE:=GPLv2
 PKG_LICENSE_FILES:=LICENSE
 PKG_MAINTAINER:=Zhuofei Wang <SemigodKing@gmail.com>
 
+PKG_BUILD_DEPENDS:=argp-standalone
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)/$(BUILD_VARIANT)/$(PKG_NAME)-$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
@@ -31,7 +32,7 @@ define Package/cdns
 	SUBMENU:=Network
 	TITLE:=CureDNS is an experimental tool to cure your poisoned DNS.
 	URL:=https://github.com/semigodking/cdns
-	DEPENDS:=+libevent2 +argp-standalone
+	DEPENDS:=+libevent2
 endef
 
 define Package/cdns/description
