--- a/luci/luci-app-cdns/Makefile
+++ b/luci/luci-app-cdns/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2015 OpenWrt-dist
+# Copyright (C) 2015 Gmod
 #
 # This is free software, licensed under the GNU General Public License v3.
 # See /LICENSE for more information.
