--- a/package/pdnsd/files/pdnsd.conf
+++ b/package/pdnsd/files/pdnsd.conf
@@ -6,7 +6,7 @@ global {
     server_port = 2053;				#your port
     status_ctl = on;
     query_method=tcp_only;                       #查询上级的方法tcp_only udp_tcp udp_only
-    min_ttl=1d;					#单位有w周 d天 h小时 m分钟 
+    min_ttl=1h;					#单位有w周 d天 h小时 m分钟 
     max_ttl=1w;
     timeout=10;
     neg_domain_pol=on;
@@ -35,6 +35,7 @@ server {
     interval = 15m;
     preset = off;
 }
+/*
 server {                                                                       
     label= "dns114";                                                  
     ip = 114.114.114.114,114.114.115.115; 
@@ -44,7 +45,6 @@ server {
     interval = 15m;
     preset = off;                                                          
 }
-/*
 #此处放置你自己的server
 #比如
 server {
