Update CDNS to latest commit

--- a/package/cdns/Makefile
+++ b/package/cdns/Makefile
@@ -8,8 +8,8 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=cdns
-PKG_VERSION:=0.04
-PKG_RELEASE:=d892e0bb145db81685b69d6b750e25b6d29a173e
+PKG_VERSION:=1.00
+PKG_RELEASE:=7f064d05516f511d80adc99ce831e187e2d0b35a
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE).tar.bz2
@@ -17,7 +17,7 @@ PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_URL:=https://github.com/semigodking/cdns.git
 PKG_SOURCE_VERSION:=$(PKG_RELEASE)
 
-PKG_LICENSE:=GPLv2
+PKG_LICENSE:=Apache v2.0
 PKG_LICENSE_FILES:=LICENSE
 PKG_MAINTAINER:=Zhuofei Wang <SemigodKing@gmail.com>
 
