Update redsocks2 to latest commit

--- a/package/redsocks2-ssl/Makefile
+++ b/package/redsocks2-ssl/Makefile
@@ -9,7 +9,7 @@ include $(TOPDIR)/rules.mk
 
 PKG_NAME:=redsocks2
 PKG_VERSION:=0.66
-PKG_RELEASE:=8b9228e12f34bf55c5b5f91d15753419a0fe1288
+PKG_RELEASE:=03b482510a6a412df702df9a2987447de910abad
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE).tar.bz2
@@ -17,7 +17,7 @@ PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
 PKG_SOURCE_URL:=https://github.com/semigodking/redsocks.git
 PKG_SOURCE_VERSION:=$(PKG_RELEASE)
 
-PKG_LICENSE:=GPLv2
+PKG_LICENSE:=Apache v2.0
 PKG_LICENSE_FILES:=LICENSE
 PKG_MAINTAINER:=Zhuofei Wang <SemigodKing@gmail.com>
 
