--- a/luci/luci-app-shadowsocks/Makefile
+++ b/luci/luci-app-shadowsocks/Makefile
@@ -25,7 +25,7 @@ define Package/luci-app-shadowsocks/Default
 	SUBMENU:=Luci
 	TITLE:=LuCI Support for shadowsocks-libev
 	PKGARCH:=all
-	DEPENDS:=+iptables +shadowsocks-libev +ip +iptables-mod-tproxy $(1)
+	DEPENDS:=+iptables +shadowsocks-libev-new +ip +iptables-mod-tproxy $(1)
 endef
 
 Package/luci-app-shadowsocks = $(call Package/luci-app-shadowsocks/Default,+ipset)
