--- a/package/pdnsd/files/pdnsd.conf
+++ b/package/pdnsd/files/pdnsd.conf
@@ -2,15 +2,20 @@ global {
     perm_cache=1024;
     cache_dir="/var/pdnsd";
     run_as="nobody";
-    server_ip = 192.168.1.1;			#any or your ip
-    server_port = 2053;				#your port
-    status_ctl = on;
-    query_method=tcp_only;                       #查询上级的方法tcp_only udp_tcp udp_only
-    min_ttl=1h;					#单位有w周 d天 h小时 m分钟 
-    max_ttl=1w;
-    timeout=10;
+    server_ip = 192.168.1.1;		#any or your ip
+    server_port = 2053;			#your port
+    status_ctl = on;			#pdnsd运行时通过pdnsd-ctl进行管理
+    query_method=tcp_only;              #查询上级的方法tcp_only udp_tcp udp_only
+    min_ttl=1h;				#最小TTL缓存时间，建议设置在1m~15m（默认单位秒，m=分钟,d=天,w=周,h=小时）
+    max_ttl=1w;				#最大TTL缓存时间，一般来讲不影响性能和表现（默认单位秒，m=分钟,d=天,w=周）
+    paranoid=on;			#缓存污染预防
+    timeout=10;				#全局超时时间，建议时长大于upstream超时时长，如果使用tcp_udp建议大于upstream超时的两倍
+    randomize_recs = on;		#在返回多个ip的时候会随机重新排序缓存
+    debug = off;			#调试模式，打开你会发现你的/var/log会以大概一小时1G的速度写入log文件。除非调试否则打开就是作死
+    daemon = off;			#以后台模式运行，除非需要调试否则不要打开
+    verbosity = 1;			#日志的详细程度，1感觉挺好
+    udpbufsize=1024;			#UDP报文大小的上限
     neg_domain_pol=on;
-    udpbufsize=1024;
 }
 server {
     label = "opendns";
@@ -25,6 +30,7 @@ server {
     interval = 15m;
     preset = off;
     port = 5353;
+    proxy_only = on;
 }
 server {
     label= "googledns"; 
@@ -34,6 +40,7 @@ server {
     ping_timeout = 100;
     interval = 15m;
     preset = off;
+    proxy_only = on;
 }
 /*
 server {                                                                       
@@ -43,7 +50,8 @@ server {
     uptest = ping;
     ping_timeout = 100;
     interval = 15m;
-    preset = off;                                                          
+    preset = off;
+    proxy_only = on;
 }
 #此处放置你自己的server
 #比如
@@ -51,7 +59,8 @@ server {
     label= "mydns";
     ip = 127.0.0.1;
     port = 1053;
-    uptest = none;        
+    uptest = none;
+    proxy_only = on;
 }
 */
 source {
