--- a/luci/luci-theme-material/Makefile
+++ b/luci/luci-theme-material/Makefile
@@ -17,8 +17,8 @@ include $(INCLUDE_DIR)/package.mk
 
 define Package/luci-theme-$(THEME_NAME)
   SECTION:=luci
-  CATEGORY:=LuCI
-  SUBMENU:=9. Themes
+  CATEGORY:=Gmod
+  SUBMENU:=Luci
   DEPENDS:=+libc
   TITLE:=LuCI Theme - $(THEME_TITLE)
   URL:=http://wcan.in/
