--- a/package/n2n/Makefile
+++ b/package/n2n/Makefile
@@ -1,17 +1,15 @@
 include $(TOPDIR)/rules.mk
 
-PKG_SOURCE_URL:=https://github.com/ghostry/n2n.git
-PKG_SOURCE_VERSION:=2105555
 
 PKG_NAME:=n2n
-PKG_VERSION:=2.1_git$(PKG_SOURCE_VERSION)
-PKG_RELEASE:=1
+PKG_VERSION:=2.4
+PKG_RELEASE:=$(PKG_VERSION)
+PKG_SOURCE_URL:=https://github.com/ntop/n2n/archive/
+PKG_MD5SUM:=807c465be11615d2e08a8bd85244b95c
 PKG_LICENSE:=GPLv3
 PKG_LICENSE_FILES:=LICENSE
 
-PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)
-PKG_SOURCE:=$(PKG_SOURCE_SUBDIR).tar.gz
-PKG_SOURCE_PROTO:=git
+PKG_SOURCE:=$(PKG_VERSION).tar.gz
 
 include $(INCLUDE_DIR)/package.mk
 
