mv luci-theme-g to luci-theme-material-dark

--- a/luci/luci-theme-material-dark/Makefile
+++ b/luci/luci-theme-material-dark/Makefile
@@ -6,7 +6,7 @@
 
 include $(TOPDIR)/rules.mk
 
-LUCI_TITLE:=G Theme
+LUCI_TITLE:=Material Dark Theme
 LUCI_DEPENDS:=
 
 include $(TOPDIR)/feeds/luci/luci.mk
