--- a/luci/luci-app-smartdns/Makefile
+++ b/luci/luci-app-smartdns/Makefile
@@ -8,8 +8,8 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-smartdns
-PKG_VERSION:=1.2019.06.21
-PKG_RELEASE:=2337
+PKG_VERSION:=1.2020.02.25
+PKG_RELEASE:=2212
 
 PKG_LICENSE:=GPLv3
 PKG_LICENSE_FILES:=LICENSE
@@ -42,28 +42,15 @@ endef
 define Build/Compile
 endef
 
-define Package/luci-app-smartdns/postinst
-#!/bin/sh
-if [ -z "$${IPKG_INSTROOT}" ]; then
-	chmod 755 /etc/init.d/cdns >/dev/null 2>&1
-	/etc/init.d/cdns enable >/dev/null 2>&1
-fi
-exit 0
-endef
-
 define Package/luci-app-smartdns/install
 	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/controller
-	$(INSTALL_DATA) ./files/luci/controller/smartdns.lua $(1)/usr/lib/lua/luci/controller/smartdns.lua
+	$(INSTALL_DATA) ./files/usr/lib/lua/luci/controller/smartdns.lua $(1)/usr/lib/lua/luci/controller/smartdns.lua
 	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/i18n
-	$(INSTALL_DATA) ./files/luci/i18n/smartdns.*.lmo $(1)/usr/lib/lua/luci/i18n
-	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/view/smartdns
-	$(INSTALL_DATA) ./files/luci/view/smartdns/*.htm $(1)/usr/lib/lua/luci/view/smartdns
-	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/model
-	$(INSTALL_DATA) ./files/luci/model/smartdns.lua $(1)/usr/lib/lua/luci/model
-	$(INSTALL_DIR) $(1)/usr/lib/lua/luci/model/cbi/smartdns
-	$(INSTALL_DATA) ./files/luci/model/cbi/smartdns/*.lua $(1)/usr/lib/lua/luci/model/cbi/smartdns
-	$(INSTALL_DIR) $(1)/etc/uci-defaults
-	$(INSTALL_BIN) ./files/uci-defaults/50_luci-smartdns $(1)/etc/uci-defaults
+	$(INSTALL_DATA) ./files/usr/lib/lua/luci/i18n/smartdns.*.lmo $(1)/usr/lib/lua/luci/i18n
+	$(INSTALL_DIR) $(1)/usr/share/rpcd/acl.d
+	$(INSTALL_DATA) ./files/usr/share/rpcd/acl.d/luci-app-smartdns.json $(1)/usr/share/rpcd/acl.d
+	$(INSTALL_DIR) $(1)/www/luci-static/resources/view/smartdns
+	$(INSTALL_DATA) ./files/www/luci-static/resources/view/smartdns/smartdns.js $(1)/www/luci-static/resources/view/smartdns
 endef
 
 $(eval $(call BuildPackage,luci-app-smartdns))
