--- a/package/v2ray/Config.in
+++ b/package/v2ray/Config.in
@@ -1,9 +1,13 @@
 menu "V2Ray Configuration"
-	depends on PACKAGE_v2ray-core
+	depends on PACKAGE_v2ray
+
+config V2RAY_COMPRESS_GOPROXY
+	bool "Compiling with GOPROXY proxy"
+	default y
 
 choice
 	prompt "JSON Config Support"
-	default V2RAY_JSON_V2CTL
+	default V2RAY_JSON_INTERNAL
 
 	config V2RAY_JSON_V2CTL
 		bool "Load JSON from V2Ctl"
@@ -19,15 +23,15 @@ endchoice
 config V2RAY_EXCLUDE_V2CTL
 	bool "Exclude V2Ctl"
 	depends on V2RAY_JSON_INTERNAL || V2RAY_JSON_NONE
-	default n
+	default y
 
 config V2RAY_EXCLUDE_ASSETS
 	bool "Exclude geoip.dat & geosite.dat"
-	default n
+	default y
 
 config V2RAY_COMPRESS_UPX
 	bool "Compress executable files with UPX"
-	default n
+	default y
 
 choice
 	prompt "Disable Features"
