--- a/package/smartdns/Makefile
+++ b/package/smartdns/Makefile
@@ -10,7 +10,7 @@ PKG_VERSION:=1.2021.08
 PKG_RELEASE:=1
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
-PKG_SOURCE_URL:=https://github.com/pymumu/smartdns/archive/refs/tags/Release34.tar.gz
+PKG_SOURCE_URL:=https://github.com/pymumu/smartdns/archive/refs/tags/Release34.tar.gz?
 PKG_HASH:=9ace049d38de38fadbcc5148585649d7ae7b49e074edb1a3b914a5f6b87918bf
 
 PKG_MAINTAINER:=Nick Peng <pymumu@gmail.com>
