--- a/package/smartdns/Makefile
+++ b/package/smartdns/Makefile
@@ -8,6 +8,7 @@ include $(TOPDIR)/rules.mk
 PKG_NAME:=smartdns
 PKG_VERSION:=1.2021.08
 PKG_RELEASE:=1
+PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-Release34
 
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION).tar.gz
 PKG_SOURCE_URL:=https://github.com/pymumu/smartdns/archive/refs/tags/Release34.tar.gz?
