--- a/package/v2ray/Makefile
+++ b/package/v2ray/Makefile
@@ -88,9 +88,9 @@ It secures your network connections and thus protects your privacy.
 endef
 
 ifeq ($(CONFIG_V2RAY_COMPRESS_GOPROXY),y)
-export GO111MODULE=on
-export GOPROXY=https://goproxy.io
-#export GOPROXY=https://mirrors.aliyun.com/goproxy/
+export GO111MODULE=auto
+export GOPROXY=https://goproxy.io,direct
+#export GOPROXY=https://goproxy.cn,direct
 endif
 
 V2RAY_SED_ARGS:=
